--- a/src/components/programs-accordion/sass/programs-accordion.scss
+++ b/src/components/programs-accordion/sass/programs-accordion.scss
@@ -215,6 +215,7 @@ a { color: $dark-blue; }
         .badger-accordion__trigger-icon {
             &:before {
                 transform: rotate(45deg) translate3d(13px, 14px, 0);
+                left: 3px;
             }
 
             &:after {
@@ -273,20 +274,20 @@ a { color: $dark-blue; }
         content: "";
         height: 3px;
         position: absolute;
-        top: 10px;
+        top: 5px;
         transition: all ease-in-out (($transition-time / 3) * 2);
-        width: 30px;
+        width: 20px;
     }
 
     &:before {
-        left: 0px;
+        left: 10px;
         transform: rotate(45deg) translate3d(8px, 22px, 0);
         transform-origin: 100%;
     }
 
     &:after {
         transform: rotate(-45deg) translate3d(-8px, 22px, 0);
-        right: 0px;
+        right: 10px;
         transform-origin: 0;
     }
 }
@@ -326,6 +327,7 @@ a { color: $dark-blue; }
     .badger-accordion__panel {
     max-height: 75vh;
     overflow: hidden;
+    font-family: sans-serif;
 
     // scss-lint:disable ImportantRule
       &.-ba-is-hidden {
