updates to programs API endpoint and styling

--- a/src/components/programs-api/sass/programs-api.scss
+++ b/src/components/programs-api/sass/programs-api.scss
@@ -13,7 +13,7 @@ div.programs-container {
   .programs-header {
     font-size: 28px;
     padding-bottom: 50px;
-    font-family: 'Josefin Sans', Arial;
+    font-family: 'Roboto','Josefin Sans', Arial;
     font-weight: bold;
     text-align: center;
   }
