--- a/src/components/programs-api/sass/programs-api.scss
+++ b/src/components/programs-api/sass/programs-api.scss
@@ -1,3 +1,10 @@
+//BREAKPOINTS
+$mobile: 768px;
+$tablet: 769px;
+$desktop: 1024px;
+$widescreen: 1216px;
+$full: 1408px;
+
 .programs--programs-api {
   .debug-program-id {
     padding-bottom: 30px;
@@ -5,19 +12,39 @@
   div.programs-container {
     width: 100%;
     padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 0 30px 0 rgba(0,0,0,0.15);
-    height: 300px;
+    height: 350px;
     overflow-y: scroll;
-    background-color: #f9f9f9;
 
     .programs-header {
       font-size: 28px;
-      padding-bottom: 50px;
+      padding-bottom: 30px;
       font-family: 'Roboto','Josefin Sans', Arial;
       font-weight: bold;
       text-align: left;
       padding-left: 20px;
+
+      &.sub-header {
+        padding-bottom: 30px;
+        font-size: 20px;
+
+        @media screen and (max-width: $desktop) {
+          font-size: 18px;
+        }
+
+        @media screen and (max-width: $mobile) {
+          padding-left: 0px;
+          font-size: 15px;
+        }
+      }
+
+      @media screen and (max-width: $desktop) {
+        font-size: 23px;
+      }
+
+      @media screen and (max-width: $mobile) {
+        padding-left: 0px;
+        font-size: 20px;
+      }
     }
 
     .programs-columns {
@@ -45,6 +72,7 @@
           font-family: 'Josefin Sans', Arial;
           position: relative;
           top: 0;
+          font-size: 15px;
 
           .sticky {
             position: sticky;
@@ -55,6 +83,10 @@
             padding-bottom: 28px;
             padding-left: 10%;
             font-family: 'roboto';
+            @media screen and (max-width: $mobile) {
+              padding-left: 0;
+              font-size: 14px;
+            }
             .type-checkbox {
               margin-right: 10px;
             }
@@ -71,7 +103,7 @@
           .empty-message {
             text-align: center;
             font-size: 20px;
-            font-family: sans-serif;
+            font-family: 'Roboto', sans-serif;
             color: #5d5d5d;
             padding-top: 120px;
           }
