--- a/src/components/programs-accordion/sass/programs-accordion.scss
+++ b/src/components/programs-accordion/sass/programs-accordion.scss
@@ -237,7 +237,7 @@ $transition-time: 0.2s;
 
       &:focus,
       &:hover {
-          background-color: $hoopstir-dark-grey;
+          background-color: var(--main-bg-color);
           cursor: pointer;
           outline: none;
 
@@ -259,7 +259,7 @@ $transition-time: 0.2s;
 
 
   .badger-accordion__trigger-title {
-    font-size: 1.2rem;
+    font-size: 16px;
     transition: ease-in-out 0.3s;
 
     display: flex;
@@ -272,7 +272,7 @@ $transition-time: 0.2s;
     }
 
     @media screen and (max-width: $mobile) {
-      font-size: 1.1rem;
+      font-size: 12px;
     }
   }
 
