--- a/src/components/programs-accordion/sass/programs-accordion.scss
+++ b/src/components/programs-accordion/sass/programs-accordion.scss
@@ -44,10 +44,6 @@ $transition-time: 0.2s;
     svg { fill: $blue; }
 }
 
-
-
-
-
 // ==========================================================================
 // # BASE
 // ==========================================================================
@@ -154,7 +150,6 @@ $transition-time: 0.2s;
 
   .inline-list__item { display: inline-block; }
 
-
   .icon-link {
       align-items: center;
       display: flex;
@@ -191,7 +186,6 @@ $transition-time: 0.2s;
       max-width: 420px;
       margin: 0 auto $spacing-unit;
   }
-
 
   .badger-accordion {
       border-radius: 4px;
@@ -237,7 +231,7 @@ $transition-time: 0.2s;
 
       &:focus,
       &:hover {
-          background-color: var(--main-bg-color);
+          background-color: var(--header-hover-color);
           cursor: pointer;
           outline: none;
 
@@ -257,11 +251,10 @@ $transition-time: 0.2s;
       }
   }
 
-
   .badger-accordion__trigger-title {
     font-size: 16px;
     transition: ease-in-out 0.3s;
-
+    align-items: center;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -271,8 +264,15 @@ $transition-time: 0.2s;
       text-transform: capitalize;
     }
 
+    .title {
+      .row.sub-details {
+        padding-top: 5px;
+      }
+    }
+
     @media screen and (max-width: $mobile) {
       font-size: 12px;
+      align-items: center;
     }
   }
 
@@ -329,6 +329,10 @@ $transition-time: 0.2s;
       line-height: 25px;
       font-size: 15px;
 
+      @media screen and (max-width: $mobile) {
+        font-size: 13px;
+      }
+
       .label {
         font-weight: bold;
       }
@@ -337,9 +341,12 @@ $transition-time: 0.2s;
         &.padding-bottom {
           padding-bottom: 20px;
         }
+
+        &.details {
+          white-space: pre-line;
+        }
       }
   }
-
 
   @media screen and (max-width: 767px) {
       .badger-accordion__trigger-icon {
@@ -347,7 +354,6 @@ $transition-time: 0.2s;
           padding: $half-spacing-unit;
       }
   }
-
 
   .accordions {
     .accordion {
@@ -367,7 +373,7 @@ $transition-time: 0.2s;
       .info-button {
         padding-top: 20px;
         .rounded-button {
-          background-color: #000;
+          background-color: var(--enrol-button-color);
           padding: 8px 15px;
           color: #fff;
           text-decoration: none;
